--- a/shared.css
+++ b/shared.css
@@ -46,11 +46,15 @@ header ul{
 
 /* Remove underline from achor tag in nav */
 /* Make the color of the tabs green and size 25px make it bold*/
+/* The padding will help us in hover effect */
+/* Add border radius for hover effect */
 nav ul a{
     text-decoration: none;
     color: white;
     font-size: 25px;
     font-weight: bold;
+    padding: 0 8px;
+    border-radius: 8px;
 }
 
 /* The list items are touching each other, we can change this by left margin */
@@ -72,5 +76,25 @@ header{
 
 /* Adding hover effect to a */
 nav ul a:hover{
-    color: rgb(224, 206, 206);
+    background-color: #ed2b38;
+}
+
+
+/* Creating footer */
+footer ul{
+    background-color: black;
+    display: flex;
+    padding: 12px;
+    justify-content: center;
+}
+
+/* Change icon sizes */
+footer ul img{
+    width: 40px;
+    height: 40px;
+}
+
+/* Space between the images */
+footer li{
+    margin-left: 17px;
 }
